test for orchestrator function