@@ -6,7 +6,6 @@ package org.example;
 
 import java.io.*;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Urinals {
 
@@ -46,30 +45,37 @@ public class Urinals {
     }
 
     public static int countUrinals(String input) {
-        int available = input.length();
-        for(int i=0;i<input.length();i++) {
-            if (input.charAt(i) == '1') {
-                if ((i!=input.length()-1) && (input.charAt(i+1) == '1'))
-                    return -1;
-            }
+        if (input.contains("11"))
+            return -1;
 
-            if (input.charAt(i) == '1') {
-                if (i == 0 || i == input.length()-1)
-                    available -= 2;
-                else
-                    available -= 3;
+        if (input.length() == 1)
+            return input.contains("0") ? 1 : 0;
+
+        char[] input_chars = input.toCharArray();
+        int available = 0;
+        if ( input_chars[0] == '0' && input_chars[1] == '0' ) {
+            input_chars[0] = '1';
+            available++;
+        }
+
+        for(int idx = 1; idx <input_chars.length - 1; idx++) {
+            if(input_chars[idx] == '0' && input_chars[idx-1] == '0' && input_chars[idx+1] == '0') {
+                available++;
+                input_chars[idx] = '1';
             }
         }
-        if (available > 1)
-            available = (int)Math.ceil(available/2.0);
+
+        if (input_chars[input_chars.length - 2] == '0' && input_chars[input_chars.length-1] == '0')
+            available++;
+
         return available;
     }
 
     public static void writeFile(List<Integer> values) throws IOException {
         String outName = "rule.txt";
         File folder = new File(".");
-        List<String> fileNames = Arrays.stream(folder.listFiles()).map(file -> file.getName())
-                .filter(name -> name.matches("rule.*.txt")).sorted().collect(Collectors.toList());
+        List<String> fileNames = Arrays.stream(folder.listFiles()).map(File::getName)
+                .filter(name -> name.matches("rule.*.txt")).sorted().toList();
         if (!fileNames.isEmpty()) {
             String highest = fileNames.get(fileNames.size() - 1);
             String numberValue = highest.substring(4, highest.length() - 4);
@@ -84,5 +90,13 @@ public class Urinals {
             file.write(x.toString()+"\n");
         }
         file.close();
+    }
+
+    public static void perform() throws InvalidFileException, IOException {
+        List<String> inputLines = openFile(urinalsFilePath);
+        List<Integer> count = new ArrayList<>();
+        for(String s:inputLines)
+            count.add(countUrinals(s));
+        writeFile(count);
     }
 }
